:bug: fix delegateRegistration transition flickering

--- a/src/components/registerDelegate/registerDelegate.css
+++ b/src/components/registerDelegate/registerDelegate.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: calc(75vh - (32px + 45px + 48px)); /* stylelint-disable-line */
+    height: calc(75vh - 132px); /* stylelint-disable-line */
     width: 100%;
   }
 
